--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "homepage": "https://alonilk2.github.io/IM.Barber-Landing-page",
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-photo-gallery": "^8.0.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "react-social-icons": "^5.15.0",
     "web-vitals": "^2.1.4"
