--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "react-social-icons": "^5.15.0",
+    "react-social-media-embed": "^2.5.17",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
